--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "@types/command-line-args": "^5.2.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
+    "@types/cors": "^2.8.12",
     "@types/find": "^0.2.1",
     "@types/fs-extra": "^9.0.13",
     "@types/jasmine": "^4.0.0",
